--- a/hosted/css/main.css
+++ b/hosted/css/main.css
@@ -8,6 +8,12 @@ body {
 main {
   flex: 1 0 auto; }
 
+#head {
+  z-index: 50000; }
+
+#main {
+  z-index: 0; }
+
 .heavy {
   font-weight: 500; }
 
@@ -15,12 +21,21 @@ main {
   visibility: hidden;
   display: none !important; }
 
-.space-gap {
-  height: 10px; }
-
 .centered-button {
   left: 50%;
   transform: translateX(-50%); }
+
+.centered {
+  margin-left: auto;
+  margin-right: auto; }
+
+.no-side-padding {
+  padding-left: 0 !important;
+  padding-right: 0 !important; }
+
+.no-shadow {
+  -webkit-box-shadow: none;
+  box-shadow: none; }
 
 .pushed-down {
   margin-top: 20px; }
@@ -30,6 +45,9 @@ main {
 
 .pushed-down-3 {
   margin-top: 60px; }
+
+.space-gap {
+  height: 10px; }
 
 .progress {
   margin: 0;
@@ -58,7 +76,7 @@ main {
   .page-footer .footer-copyright .container .row {
     margin-bottom: 0; }
 
-#homeWrapper, #signupWrapper {
+.pageWrapper {
   position: relative;
   left: 100%;
   transition: left 1s, opacity 0.5s;
@@ -135,3 +153,12 @@ main {
   .account-top-bar h5 {
     margin: 0;
     line-height: 1.5; }
+
+#profileInfoContainer {
+  padding: 0 30px; }
+
+.profile-content {
+  opacity: 0;
+  transition: opacity 0.5s; }
+  .profile-content.opened {
+    opacity: 1; }
