--- a/clientDEV/scss/main.scss
+++ b/clientDEV/scss/main.scss
@@ -52,6 +52,10 @@ main {
   height: 10px;
 }
 
+.brand-logo, a {
+  cursor: pointer;
+}
+
 .progress {
   margin: 0;
   opacity: 0;
@@ -191,4 +195,10 @@ main {
 
 .collapsible-thin-padding {
   padding: 0.5rem;
+}
+.autocomplete-content {
+  position: absolute;
+}
+.search-wrapper i {
+  top: 10px;
 }
